--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -4,6 +4,11 @@
     padding: 8px 32px 8px 16px;
 }
 
+body {
+    margin: 0px;
+    width: 100%;
+    height: 100%;
+}
 #logo {
     background-color: #ff7f7f;
     height: 35px;
