--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -5,3 +5,22 @@
     font-size: 1rem;
     display: block;
 }
+
+.flex-container {
+    display: flex;
+}
+
+.homeImages {
+    width: 76%;
+    margin: 16px;
+}
+
+.movieFilter {
+    width: 24%;
+    margin: 16px;
+}
+
+.leftListItem {
+    margin: 20px;
+    cursor: pointer;
+}
