--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -1,22 +1,26 @@
 .header {
-    background-color: #222;
-    height: 36px;
-    padding: 8px 32px 8px 16px;
+  background-color: #222;
+  height: 36px;
+  padding: 8px 32px 8px 16px;
 }
 
 body {
-    margin: 0px;
-    width: 100%;
-    height: 100%;
+  margin: 0px;
+  width: 100%;
+  height: 100%;
 }
 #logo {
-    background-color: #ff7f7f;
-    height: 35px;
-    display: flex;
-    flex-direction: left;
-    animation: spin 8s linear infinite;
+  background-color: #ff7f7f;
+  height: 35px;
+  display: flex;
+  flex-direction: left;
+  animation: spin 8s linear infinite;
 }
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
