--- a/src/screens/home/Home.css
+++ b/src/screens/home/Home.css
@@ -1,3 +1,15 @@
+.login{
+  color: white;
+  background-color: blue;
+  float: right;
+  margin-right: 5%;
+  padding: 0 10px;
+  height: 100%;
+  border: none;
+  border-radius: 4px;
+  display: none;
+}
+
 .heading {
   background-color: #ff9999;
   padding: 8px;
