--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -2,6 +2,8 @@
   background-color: #222;
   height: 36px;
   padding: 8px 32px 8px 16px;
+  display: flex;
+  justify-content: space-between;
 }
 
 body {
@@ -9,6 +11,7 @@ body {
   width: 100%;
   height: 100%;
 }
+
 #logo {
   background-color: #ff7f7f;
   height: 35px;
@@ -16,6 +19,7 @@ body {
   flex-direction: left;
   animation: spin 8s linear infinite;
 }
+
 @keyframes spin {
   0% {
     transform: rotate(0deg);
